MD Settings: ignore 0% updates on help/about page

R=dpapad@chromium.org
BUG=663507
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2476353007
Cr-Commit-Position: refs/heads/master@{#431080}

Former-commit-id: 0b695038aa4397ef763fc51b80fbdb0202026b6e